# DesktopFiles

./: ILive2.0接口问题讨论.md  VIPKID-ADAPTER.h  git.md  vipkid电话沟通.docx  二线反馈娃娃机潜在客户表汇总.xlsx  快校问题整理.xlsx  段玉磊面试题.docx
20180428/: AVSDK 196 影响.docx  iOS 197 更新日志.md  娃娃机方案支持.md  快校与时光钥题遗留问题.docx  近期反馈的问题.xlsx  音视频供应商准入case.xlsx
20180428/娃娃机接入.mindnode/: contents.xml
201805/: vipkid毫秒录制问题同步.md  xc_event.cpp  xc_string.h  xc_struct.cpp
201805/LiveTree/LiveTree/: AppConfigViewController.h  AppConfigViewController.m  AppDelegate.h  AppDelegate.m  LogViewController.h  LogViewController.m  LoginViewController.h  LoginViewController.m  MainSplitViewController.h  MainSplitViewController.m  MainWindowController.h  MainWindowController.m  RoomConfigViewController.h  RoomConfigViewController.m  RoomInfoViewController.h  RoomInfoViewController.m  RoomTabViewController.h  RoomTabViewController.m  TreeMenuViewController.h  TreeMenuViewController.m  main.m
201805/LiveTree/LiveTree.xcodeproj/: project.pbxproj
201805/LiveTree/LiveTree.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
201805/LiveTree/LiveTree/Base.lproj/: Main.storyboard
201805/SpearTest/: 1400027849.conf
201805/SpearTest/SpearTest/: main.cpp  xc_spear.cpp  xc_spear.h
201805/SpearTest/SpearTest.xcodeproj/: project.pbxproj
201805/SpearTest/SpearTest.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
201805/sdk_dev/: AccompanyViewController.h  AccompanyViewController.mm  AccompanyViewController.xib  CMakeLists.txt  LoginViewController.h  LoginViewController.mm  LoginViewController.xib  MainMenu.xib  app_delegate.h  app_delegate.m  info.plist  main.m  main_menu.h  main_menu.m
201805/sdk_dev/Render/: ConfUIDef.h  MAVBackView.h  MAVBackView.mm  MAVBasicVideoView+EventProcessor.h  MAVBasicVideoView+EventProcessor.mm  MAVBasicVideoView.h  MAVBasicVideoView.mm  MAVBasicVideoViewController.h  MAVBasicVideoViewController.mm  MAVCAOpenGLLayer.h  MAVCAOpenGLLayer.mm  MAVLayoutManager.h  MAVLayoutManager.mm  MAVQuadRender.h  MAVQuadRender.mm  MAVQuadRenderUtils.h  MAVQuadRenderUtils.mm  MAVRender.h  MAVRender.mm  MAVRenderUtils.h  MAVRenderUtils.mm  MAVVideoDataDispatcher.h  MAVVideoDataDispatcher.mm
201805/sdk_dev/config/: 1400029761.conf  1400029763.conf  1400036169.conf  1400046799.conf
201805/string_test/string_test.xcodeproj/: project.pbxproj
201806/:  avsdk_pk_agora_20180606.xlsx
20180629/: AVSDK_Agora_PK.xlsx  avsdk_agora_pk_test.md
20180629/ScreenRecord_Demo/Frameworks/: SDK_Version.txt
20180629/ScreenRecord_Demo/ScreenRecord/: HostViewController.m  LoginViewController.h  LoginViewController.m  RoomNumViewController.h  main.m
20180629/SreenRecord/ScreenRecord/: AppDelegate.m  GuestViewController.m  LoginViewController.m
20180629/音质对比/:  avsdk_pk_agora_20180606.xlsx  agora_rec.m4a  vip陪练_rec.m4a
201807/ScreenRecord_Demo/ScreenRecord/: AppDelegate.m  ConstHeader.h  RoomNumViewController.m
201807/SreenRecord/Frameworks/: SDK_Version.txt
201807/SreenRecord/ScreenRecord/: AppDelegate.h  ConstHeader.h  GuestViewController.h  HostViewController.m  Info.plist
201807/basic/: basic_dr.cmake  txg_verinfo.h
201807/basic/datareport/: datareport_dr.cmake  tx_dr_base.h  tx_dr_thread.h  tx_dr_util.h  tx_pb_codec.c
201807/basic/enums/: TXENALType.h
201807/basic/filesystem/: TXCMMapFile.h  TXCPath.h  TXCPathIterator.cpp  txg_mmap_util.h
201807/basic/log/: TXCLogCrypt.cpp  log.cmake  txg_appender.cpp  txg_appender.h  txg_formater.cpp  txg_log.cpp
201807/basic/module/: module.cmake
201807/basic/networks/: AsyncNetClientWrapper.cpp  AsyncNetClientWrapper.h  NetClientContextWrapper.cpp  TXCByteQueue.cpp  qcloud_live_net.h  txg_connect_util.c
201807/basic/socket/: getdnssvraddrs.cc  getifaddrs.cc  local_ipstack.cc  local_ipstack.h  nat64_prefix_util.cc  platform_comm.mm  socket_address.cc
201807/basic/structs/: TXSNALPacket.hpp
201807/basic/test/: log.cpp  unix_impl.cpp
201807/basic/thread/: TXCAbstractThread.h  TXCCondition.cpp  TXCCondition.h  TXCMutex.cpp  TXCMutex.h  TXCThread.cpp  TXCThread.h  TXCThreadLocalStore.cpp  TXCThreadLocalStore.h
201807/basic/utils/: TXCTickCount.cpp  TXCTickCount.h  txg_assert.c  txg_assert.h  txg_bootrun.h  txg_compiler_util.h  txg_log_base.c  txg_str_util.h  txg_time_util.cpp  txg_time_util.h  utils.cmake
201809/: testasync.cpp  vipkid录制测试步骤.md  关联子帐号.md
201809/ScreenRecord_Demo/ScreenRecord/: GuestViewController.m
201809/SreenRecord/Frameworks/: LoadSDK.sh
201809/SreenRecord/ScreenRecord/: HostViewController.h  RoomNumViewController.m  ScreenRecord-Prefix.pch
201809/SreenRecord/ScreenRecord.xcodeproj/: project.pbxproj
201809/basic/: CMakeLists.txt  basic.cmake  txg_verinfo.c
201809/basic/datareport/: tx_dr_api.cpp  tx_dr_base.cpp  tx_dr_codec.c  tx_dr_codec.h  tx_dr_thread.cpp  tx_dr_util.cpp  tx_pb_codec.h
201809/basic/datareport/include/: tx_dr_def.h
201809/basic/enums/: enums.cmake
201809/basic/filesystem/: TXCMMapFile.cpp  TXCPath.cpp  TXCPathIterator.h  filesystem.cmake  txg_mmap_util.cpp
201809/basic/log/: TXCAutoBuffer.cpp  TXCAutoBuffer.h  TXCLogBuffer.cpp  TXCLogBuffer.h  TXCLogCrypt.h  TXCLogger.h  TXCPtrBuffer.cpp  TXCPtrBuffer.h  txg_android_log.h  txg_log.h  txg_log_util.c  txg_log_util.h  txg_preprocessor.h
201809/basic/module/: TXCStatusRecorder.cpp  TXCStatusRecorder.h
201809/basic/networks/: NetClientContextWrapper.h  SyncNetClientWrapper.cpp  SyncNetClientWrapper.h  SyncNetClientWrapperNoQuic.cpp  TXCByteQueue.h  TXISocket.h  networks.cmake  qcloud_live_net_client.h  qcloud_live_net_client_context.h  txg_connect_util.h
201809/basic/socket/: getdnssvraddrs.h  getgateway.c  platform_comm.h  socket.cmake  unix_socket.cc
201809/basic/socket/jni/: ifaddrs.c
201809/basic/structs/: structs.cmake
201809/basic/thread/: TXCAbstractThread.cpp  TXCLock.h  TXCMutexVector.h  TXCRunnable.h  TXCSpinLock.h  thread.cmake
201809/basic/utils/: txg_log_base.h
201809/音质对比/: avsdk_pk_agora_in_audio.xlsx  avsdk_rec.m4a  test.xlsx
Vipkid/: VipKid进展同步.xlsx
娃娃机接入.mindnode/: viewState.plist
(+7 files in other folders)
